# Cross-Domain-Mosquito-Species-Classification

./: .gitattributes  .gitignore  .gitmodules  README.md  README_BASELINE.md  check_config.py  debug_model.py  device_check.py  evaluate.py  extract_features.py  generate_technical_report_assets.py  pixi.toml  plot_official_main_figure.py  predict.py  pyproject.toml  requirements.txt  run_multi_seed_experiments.py  run_multiple_experiments.py  train.py
configs/: default_experiment.json  efficientat_experiment.json  multi_seed_experiment.json  non_mel_experiment.json
const/: dataset.py  enum.py  filename.py  model_backend.py  path.py
framework/: acoustic_feature.py  config.py  dataset.py  engine.py  git.py  hashing.py  metadata.py  model.py  model_baseline.py  model_efficientat.py  model_output.py  utilization.py
model/: effecientat_config.py  experiment_config.py  feature_extraction_config.py  trial_config.py
schema/: data.py  experiment.py  experiment.schema.json  experiment_config.py  feature.py  feature_extraction_config.py  trial.py  trial_config.py
technical_report_assets_current_split/: aggregate_metrics.csv  aggregate_metrics.json  dataset_statistics.csv  dataset_statistics.json  domain_distribution.csv  domain_distribution.json  model_summary.json  official_species_counts.csv  official_species_counts.json  per_domain_species_ba.csv  per_domain_species_ba.json  per_seed_official_summary_best_model.csv  per_seed_official_summary_best_model.json  per_species_official_best_model.csv  per_species_official_best_model.json  per_species_official_final_model.csv  (+6 more)
(+163 files in other folders)
