[project]
name = "cross-domain-mosquito-species-classification"
version = "0.1.0"
requires-python = ">=3.12.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "torchvision>=0.20.0",
    "torchlibrosa>=0.1.0",
    "wandb>=0.25.1",
    "pydantic>=2.13.3",
    "mosaicml-streaming>=0.10.0",
]

[tool.uv]
find-links =[
    "https://data.pyg.org/whl/torch-2.10.0+cu128.html",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
